--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,22 @@
-body {
-  background-color: red;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  width: 100%;
+}
+
+header img {
+  display: block;
+  margin: auto;
+  width: 350px;
+}
+
+header nav {
+  width: 100%;
+  height: 100px;
+  background-color: #b1d281;
 }
 
