--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,22 @@
   box-sizing: border-box;
 }
 
+.d-flex {
+  display: flex;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.align-center {
+  align-items: center;
+}
+
 header {
   width: 100%;
 }
@@ -18,5 +34,21 @@ header nav {
   width: 100%;
   height: 100px;
   background-color: #b1d281;
+}
+
+header nav a {
+  margin: 0 10px;
+  font-size: 25px;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 600;
+  text-decoration: none;
+  box-sizing: content-box;
+  padding: 4px 0;
+}
+
+header nav a.active_page {
+  border-bottom: 7px solid #002d75;
+  color: #002d75;
 }
 
