--- a/resources/sass/partials/header.scss
+++ b/resources/sass/partials/header.scss
@@ -9,5 +9,19 @@ header {
     width: 100%;
     height: 100px;
     background-color: #b1d281;
+    a{
+      margin: 0 10px;
+      font-size: 25px;
+      text-transform: uppercase;
+      color: white;
+      font-weight: 600;
+      text-decoration: none;
+      box-sizing: content-box;
+      padding: 4px 0;
+    }
+    a.active_page{
+      border-bottom: 7px solid $blue-text;
+      color: $blue-text;
+    }
   }
 }
