--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,16 +60,51 @@ main h2 {
   text-align: center;
   text-transform: uppercase;
   color: #002d75;
+  text-shadow: 2px 2px white;
   font-size: 30px;
   padding: 20px 0;
 }
 
 main .card {
+  position: relative;
   width: 30%;
   margin: calc(30%/18);
 }
 
-main .card img {
+main .card a:hover .pasta_img {
+  display: none;
+}
+
+main .card .pasta_img {
+  position: relative;
+  height: 100%;
   width: 100%;
+  z-index: 1;
+}
+
+main .card .hover_card {
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #cfaf42;
+  position: absolute;
+  top: 0;
+}
+
+main .card .hover_card .details_container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+main .card .hover_card .icon_forks {
+  height: 50px;
+  display: block;
+  margin: auto;
+}
+
+main .card .hover_card h4 {
+  text-align: center;
 }
 
