--- a/resources/sass/partials/main_prodotti.scss
+++ b/resources/sass/partials/main_prodotti.scss
@@ -4,14 +4,46 @@ main{
     text-align: center;
     text-transform: uppercase;
     color: $blue-text;
+    text-shadow: 2px 2px white;
     font-size: 30px;
     padding: 20px 0;
   }
   .card{
+    position: relative;
     width: 30%;
     margin: calc(30%/18);
-    img{
+    a{
+      &:hover .pasta_img{
+        display: none;
+      }
+    }
+    .pasta_img{
+      position: relative;
+      height: 100%;
       width: 100%;
+      z-index: 1;
+    }
+    .hover_card{
+      z-index: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #cfaf42;
+      position: absolute;
+      top: 0;
+      .details_container{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+      }
+      .icon_forks{
+        height: 50px;
+        display: block;
+        margin: auto;
+      }
+      h4{
+        text-align: center;
+      }
     }
   }
 }
